Changes for Perl Application Development and Refactoring Environment

0.42 to be released
    - Fixed a bug that crashed Padre while moving panels with outline
      enabled (GARU)

0.41 2009.07.23
    - Remove Experimental mode.
    - Fixed a bug in Plugin config_write where ->selectrow_array was used 
      instead of ->do to SQL update (Thanks to tlbdk++). (AZAWAWI)
    - run_command in a separate window now works in win32 to support 
      prompt('...') in Perl 6 and <STDIN> in Perl 5. (AZAWAWI)
    - Now Padre can find/replace inside selections (GARU)
    - New Syntax highlighter configuration system. Plugins now can add more
      syntax highlighters and users can pick one per mime-type. (SZABGAB)
    - Directory browser new artwork and drag and drop support (GABRIELMAD)

0.40 2009.07.17
    - Removed about 10 dependencies, including several with lots of FAIL
      reports in CPAN Testers (ADAMK)
    - Complete refactoring of the Directory Browser, gaining a lot of 
      performance improvements and new features such as sorted output
      and context menu options (GABRIELMAD)

0.39 2009.07.09
    - Some of the refactoring code was moved to PPIx-EditorTools (MGRIMES)
    - Detection of Moose attributes in Outline view (JQUELIN)
    - Detection of MooseX::POE events in Outline view (JQUELIN)
    - Added keywords to META.yml (via Makefile.PL.) (SHLOMIF)
    - Bumped the required Test::More version to 0.88 - needed for note().
      (SHLOMIF)
    - Open Selection (ctrl-Shift-O) now displays all the files it finds
      and lets the user select (SZABGAB)
    - Eliminate crash when pressing F3/F4 while there are no open files (#421) (SZABGAB)
    - Enable/Disable Window menu options when there are (no) open files. (#417) (SZABGAB)
    - For Cut/Copy/Paste/Select All, use the focused textctrl instead
      of the editor textctrl (RSN)
    - Autoupgrade ascii files to be utf-8 on save if user types in wide characters (#304) (SZABGAB)